New game start layout

--- a/styles/general.scss
+++ b/styles/general.scss
@@ -10,5 +10,9 @@ html {
 
 body {
     font-family: 'Outfit', sans-serif;
-    
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
