Game solo Initialize

--- a/mobile-game-solo/styles/_style.scss
+++ b/mobile-game-solo/styles/_style.scss
@@ -6,8 +6,9 @@ $Silver-Hover: #DBE8ED;
 $Light-Blue: #31C3BD;
 $Light-Blue-Hover: #65E9E4;
 $Light-Yellow: #F2B137;
-$Light-Yellow-Hover: #FFC860;  
+$Light-Yellow-Hover: #FFC860; 
+
 
 
 @import "general";
-@import "mobile";
+@import "solo";
