--- a/styles/mobile.scss
+++ b/styles/mobile.scss
@@ -23,7 +23,7 @@
             align-items: center;
             flex-direction: column;
             border-radius: 1.5rem;
-            box-shadow: 0 1rem #15262e;
+            box-shadow: 0 1rem #0e1d24;
             width: 32.6rem;
             height: 19.5rem;
             row-gap: 2rem;
@@ -55,6 +55,7 @@
                     width: 42.9%;
                     height: 75%;
                     border-radius: 1rem;
+                    transition: all 700ms ease-in-out;
 
                     &:hover {
                         background-color: $Silver;
@@ -104,6 +105,11 @@
                 font-weight: 600;
                 border-radius: 1.5rem;
                 border: none;
+
+                a {
+                    text-decoration: none;
+                    color: black;
+                }
             }
 
             .cpu {
