--- a/styles/mobile.scss
+++ b/styles/mobile.scss
@@ -16,7 +16,7 @@
         row-gap: 3rem;
         // border: 1px solid magenta;
 
-        .mark-options {
+        &-options {
             background-color: $Semi-Dark-Navy;
             display: flex;
             justify-content: center;
