--- a/mobile-game-solo/styles/general.scss
+++ b/mobile-game-solo/styles/general.scss
@@ -10,5 +10,7 @@ html {
 
 body {
     font-family: 'Outfit', sans-serif;
-    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
