--- a/mobile-game-solo/styles/style.css
+++ b/mobile-game-solo/styles/style.css
@@ -13,6 +13,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: black;
 }
 
 .container {
@@ -26,7 +27,6 @@ body {
   width: 32.8rem;
   height: 51.6rem;
   margin: 2rem 2.4rem 0 2.3rem;
-  border: 1px solid magenta;
 }
 .container .game-container .head-options {
   display: flex;
@@ -44,9 +44,11 @@ body {
   background-color: #1F3641;
   border-radius: 0.5rem;
   box-shadow: 0 0.5rem #132026;
+  cursor: pointer;
 }
 .container .game-container .head-options .turn-mark .mark img {
   width: 1.6rem;
+  filter: brightness(0) saturate(100%) invert(80%) sepia(10%) saturate(464%) hue-rotate(153deg) brightness(92%) contrast(91%);
 }
 .container .game-container .head-options .turn-mark p {
   font-size: 1.4rem;
@@ -64,9 +66,64 @@ body {
   justify-content: center;
   align-items: center;
   box-shadow: 0 0.5rem #737f83;
+  cursor: pointer;
 }
 .container .game-container .head-options .restart-btn img {
   width: 1.7rem;
+}
+.container .game-container .game-board {
+  width: 32.8rem;
+  height: 32.8rem;
+  display: grid;
+  grid-template-columns: repeat(3, 9.6rem);
+  gap: 2rem;
+  margin-top: 6.4rem;
+}
+.container .game-container .game-board .game-mark {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 9.5rem;
+  box-shadow: 0 0.7rem #132026;
+  border-radius: 1.5rem;
+  background-color: #1F3641;
+  cursor: pointer;
+}
+.container .game-container .game-board .game-mark .random-mark {
+  width: 4rem;
+}
+.container .game-container .info-container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2rem;
+}
+.container .game-container .info-container .match-info {
+  width: 9.6rem;
+  height: 6.4rem;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.container .game-container .info-container .match-info .info {
+  text-transform: uppercase;
+  font-size: 1.3rem;
+  letter-spacing: 0.1rem;
+}
+.container .game-container .info-container .match-info .results {
+  font-size: 2rem;
+  font-weight: 600;
+  letter-spacing: 0.1rem;
+}
+.container .game-container .info-container .your-score {
+  background-color: #31C3BD;
+}
+.container .game-container .info-container .ties-score {
+  background-color: #A8BFC9;
+}
+.container .game-container .info-container .cpu-score {
+  background-color: #F2B137;
 }
 
 /*# sourceMappingURL=style.css.map */
