you lost... pop-up added

--- a/mobile-game-solo/styles/style.scss
+++ b/mobile-game-solo/styles/style.scss
@@ -7,14 +7,12 @@ $Light-Blue: #31C3BD;
 $Light-Blue-Hover: #65E9E4;
 $Light-Yellow: #F2B137;
 $Light-Yellow-Hover: #FFC860; 
+$Light-black: hsl(0, 0%, 0%, 55%);
 
 
 //center styles
 
-$Center: (
-justify-content: center,
-align-items: center,  
-);
+
 
 
 
