--- a/mobile-game-solo/styles/general.scss
+++ b/mobile-game-solo/styles/general.scss
@@ -9,9 +9,9 @@ html {
 }
 
 body {
+    height: 100vh;
     font-family: 'Outfit', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: black;
 }
