--- a/mobile-game-solo/styles/solo.scss
+++ b/mobile-game-solo/styles/solo.scss
@@ -4,12 +4,14 @@
         background-color: $Dark-Navy;
         display: flex;
         justify-content: center; 
+        position: relative;
 
 
     .game-container {
         width: 32.8rem;
         height: 51.6rem;
         margin: 2rem 2.4rem 0 2.3rem;
+        position: relative;
         // border: 1px solid magenta;
 
         .head-options {
@@ -42,7 +44,7 @@
                     }
                 }
         
-                p {
+                p{
                     font-size: 1.4rem;
                     letter-spacing: .1rem;
                     font-weight: 600;
@@ -130,6 +132,102 @@
                 background-color: $Light-Yellow;
             }
         }
+    
+
+    }
+
+    .pop-up-you-lost {
+       width: 100%;
+       height: 100%;
+       background-color: $Light-black; 
+       position: absolute;
+       display: flex;
+       justify-content: center;
+       align-items: center;
+       display: none;
+
+       .you-lost-container{
+           width: 37.5rem;
+           height: 22.8rem;
+           background-color: $Semi-Dark-Navy;
+           display: flex;
+           justify-content: center;
+           align-items: center;
+           flex-direction: column;
+
+           .pop-up-info {
+            // border: 1px solid magenta;
+            width: 28rem;
+            height: 14rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            gap: 1.5rem;
+
+            .default-font {
+                font-size: 1.4rem;
+                letter-spacing: .1rem;
+                font-weight: 600;
+                text-transform: uppercase;
+                color: $Silver;
+            }
+
+            .take-round {
+                width: 28;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+ 
+                .img-mark-turn {
+                    width: 3rem;
+                    margin-right: 1.4rem;
+                   img {
+                     width: 3rem;
+                   } 
+                }
+
+                p {
+                    font-size: 2.4rem;
+                    font-weight: 600;
+                    letter-spacing: .1rem;
+                    text-transform: uppercase;
+                    color: $Light-Yellow;
+                }
+            }
+
+            .btns {
+                width: 23.8rem;
+                height: 5.2rem;
+                display: flex;
+                justify-content: space-between;
+                
+                .btn{
+                    height: 5.2rem;
+                    border: none;
+                    text-transform: uppercase;
+                    font-weight: 600;
+                    letter-spacing: .1rem;
+                    border-radius: 1rem;
+                }
+
+                .quit {
+                   width: 7.6rem;
+                   background-color: $Silver;
+                   box-shadow: 0 .5rem #737f83;
+                }
+                .next-round {
+                    width: 14.6rem;
+                    background-color: $Light-Yellow;
+                    box-shadow: 0 .5rem #b88320;
+                }
+            }
+
+
+           }
+
+           
+       }
     }
     
 }
