--- a/mobile-game-solo/styles/style.css
+++ b/mobile-game-solo/styles/style.css
@@ -94,6 +94,19 @@ body {
 .container .game-container .game-board .game-mark .random-mark {
   width: 4rem;
 }
+.container .game-container .game-board .tic-tac-toe {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 9.5rem;
+  box-shadow: 0 0.7rem #1d8885;
+  border-radius: 1.5rem;
+  background-color: #31C3BD;
+}
+.container .game-container .game-board .tic-tac-toe .aligned {
+  width: 4rem;
+  filter: brightness(0) saturate(100%) invert(10%) sepia(21%) saturate(1257%) hue-rotate(157deg) brightness(96%) contrast(87%);
+}
 .container .game-container .info-container {
   display: flex;
   justify-content: space-between;
@@ -202,6 +215,85 @@ body {
   box-shadow: 0 0.5rem #737f83;
 }
 .container .pop-up-you-lost .you-lost-container .pop-up-info .btns .next-round {
+  width: 14.6rem;
+  background-color: #F2B137;
+  box-shadow: 0 0.5rem #b88320;
+}
+.container .pop-up-you-won {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.55);
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+.container .pop-up-you-won .you-won-container {
+  width: 37.5rem;
+  height: 22.8rem;
+  background-color: #1F3641;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.container .pop-up-you-won .you-won-container .pop-up-info {
+  width: 28rem;
+  height: 14rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+.container .pop-up-you-won .you-won-container .pop-up-info .default-font {
+  font-size: 1.4rem;
+  letter-spacing: 0.1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #A8BFC9;
+}
+.container .pop-up-you-won .you-won-container .pop-up-info .take-round {
+  width: 28;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.container .pop-up-you-won .you-won-container .pop-up-info .take-round .img-mark-turn {
+  width: 3rem;
+  margin-right: 1.4rem;
+}
+.container .pop-up-you-won .you-won-container .pop-up-info .take-round .img-mark-turn img {
+  width: 3rem;
+}
+.container .pop-up-you-won .you-won-container .pop-up-info .take-round p {
+  font-size: 2.4rem;
+  font-weight: 600;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  color: #31C3BD;
+}
+.container .pop-up-you-won .you-won-container .pop-up-info .btns {
+  width: 23.8rem;
+  height: 5.2rem;
+  display: flex;
+  justify-content: space-between;
+}
+.container .pop-up-you-won .you-won-container .pop-up-info .btns .btn {
+  height: 5.2rem;
+  border: none;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 0.1rem;
+  border-radius: 1rem;
+}
+.container .pop-up-you-won .you-won-container .pop-up-info .btns .quit {
+  width: 7.6rem;
+  background-color: #A8BFC9;
+  box-shadow: 0 0.5rem #737f83;
+}
+.container .pop-up-you-won .you-won-container .pop-up-info .btns .next-round {
   width: 14.6rem;
   background-color: #F2B137;
   box-shadow: 0 0.5rem #b88320;
